build queue and unit test in List.c on end function change to list_it=null

--- a/COOP/CMakeLists.txt
+++ b/COOP/CMakeLists.txt
@@ -18,6 +18,8 @@ set(no_group_source_files
     "BinaryTree.c"
     "Iterator.c"  
     "Iterator.h"  
+    "Queue.c"
+    "Queue.h"
 )
 source_group("" FILES ${no_group_source_files})
 
