--- a/UnitTestC/UnitTestC.vcxproj
+++ b/UnitTestC/UnitTestC.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="VectorUnitTest.c" />
     <ClCompile Include="BinaryTreeUnitTest.c" />
 	<ClCompile Include="listUnitTest.c" />
+	<ClCompile Include="QueueUnitTest.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseClassExample.h" />
@@ -181,7 +182,8 @@
     <ClInclude Include="TensorUnitTest.h" />
     <ClInclude Include="VectorUnitTest.h" />
     <ClInclude Include="BinaryTreeUnitTest.h" />
-	 <ClInclude Include="listUnitTest.h" />
+	<ClInclude Include="listUnitTest.h" />
+	<ClInclude Include="QueueUnitTest.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\COOP\COOP.vcxproj">
