add compare folder and add this to the cmake #63

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,4 +75,6 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 ################################################################################
 add_subdirectory(COOP)
 add_subdirectory(UnitTestC)
+add_subdirectory(OpenCV/OpenCV)
+
 
