Return to Basic setting #63

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -14,9 +14,7 @@
         {
           "name": "MEM_SIZE",
           "value": "int",
-          "type": "STRING"
-        }
-      ]
+      "ctestCommandArgs": ""
     }
   ]
 }
