Default setting to MEM_SIZE #63

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -9,7 +9,14 @@
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "",
+      "variables": [
+        {
+          "name": "MEM_SIZE",
+          "value": "ushort",
+          "type": "STRING"
+        }
+      ]
     }
   ]
 }
