add gaussian_blur function #68

--- a/OpenCV/OpenCV/CMakeLists.txt
+++ b/OpenCV/OpenCV/CMakeLists.txt
@@ -7,6 +7,7 @@ set(PROJECT_NAME OpenCV_Lib)
 set(OpenCV_Lib_Sources
     "GrayImage.c"
     "GrayImage.h"
+    "Functions.c"
 )
 source_group("OpenCV_Lib" FILES ${OpenCV_Lib_Sources})
 
