Add canny function #68

--- a/OpenCV/OpenCV/CMakeLists.txt
+++ b/OpenCV/OpenCV/CMakeLists.txt
@@ -8,6 +8,7 @@ set(OpenCV_Lib_Sources
     "GrayImage.c"
     "GrayImage.h"
     "Functions.c"
+    "Functions.h"
 )
 source_group("OpenCV_Lib" FILES ${OpenCV_Lib_Sources})
 
